Working on fixing reflection issue